<resources>
    <string name="app_name">Dynasoft</string>
    <string name="btnDateField">No Date</string>
    <string name="jobName">New Job Name</string>
    <string name="description">Job Description</string>
    <string name="location">Job Location</string>
    <string name="supervisor">Supervisor</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="service_num">Service Number</string>
    <string name="jobname">Service Name</string>
    <string name="descript">Descrption</string>
    <string name="quantity">Quantity</string>
    <string name="units">Units</string>
    <string name="eventDate">Event date</string>
    <string name="EventType">Event Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_confirmation_message">Confirmation message delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serviceName">Service Name</string>
    <string name="Add">Add Job</string>
    <string name="newservice">New Service</string>
    <string name="login">Login</string>
</resources>