<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtCommon"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/service_num"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtServiceName"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jobname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descript"
        android:inputType="textPersonName" />

</LinearLayout>