<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dynasoft">

    <Button
        android:id="@+id/btnDateField"
        android:layout_width="227dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:background="#2196F3"
        android:ems="10"
        android:inputType="date"
        android:text="@string/btnDateField"
        app:backgroundTint="@color/dynasoft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDateField">

        <Spinner
            android:id="@+id/spnServices"
            android:layout_width="251dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnNewServiceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_new_job"
            android:visibility="gone"
            tools:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <AutoCompleteTextView
            android:id="@+id/actServiceName"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:hint="@string/serviceName" />

        <EditText
            android:id="@+id/txtServiceId"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txtLocation"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSupervisor"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supervisor"
            android:inputType="textPersonName" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>